--- a/tanstackdb/package.json
+++ b/tanstackdb/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/query-db-collection": "^0.2.8",
+    "@tanstack/react-db": "^0.1.9",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
