--- a/tanstackdb/package.json
+++ b/tanstackdb/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/query-db-collection": "^0.2.8",
     "@tanstack/react-db": "^0.1.9",
+    "@tanstack/react-query": "^5.85.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
